Added image for scampi and corresponding link on index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Recipe List</h1>
-    <a href="/users/chrisaraujo/desktop/the_odin_project/repos/odin-recipes/recipes/honey_garlic_chicken.html">Honey Garlic Chicken</a>
+    <ul>
+    <li><a href="/users/chrisaraujo/desktop/the_odin_project/repos/odin-recipes/recipes/honey_garlic_chicken.html">Honey Garlic Chicken</a></li>
+    <li><a href="/users/chrisaraujo/desktop/the_odin_project/repos/odin-recipes/recipes/shrimp_scampi.html">Shrimp Scampi</a></li>
+    </ul>
 </body>
 </html>
