added link to shrimp scampi youtube video

--- a/recipes/shrimp_scampi.html
+++ b/recipes/shrimp_scampi.html
@@ -10,6 +10,7 @@
     <h1>Shrimp Scampi</h1>
         <img alt="Shrimp Scampi" src="../images/shrimp_scampi.jpg">
         <h3>Description</h3>
+        <a href="https://www.youtube.com/watch?v=95ADdCHqQFU">Link to youtube video</a>
         <p>The secret to this is the shrimp stock you make with the shells, and instead of sauteeing the shrimp we're going to poach them to keep their texture soft and silky</p>
             <ul>Ingredients</ul>
                 <li>1 1/2 lbs of Jumbo shrimp, shell on</li>
